--- a/index-mobile.html
+++ b/index-mobile.html
@@ -3,11 +3,107 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Corso Web Developer - EPICODE School</title>
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style-mobile.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <!-- HEADER -->
+    <header>
+      <img src="assets/img/logo.png" alt="Logoepicode" class="logoimg" />
+    </header>
+    <!-- MAIN -->
+    <main>
+      <!-- Section Web Developer -->
+      <div class="background">
+        <h1 class="web-dev">Corso Web Developer</h1>
+        <p class="paragrafo">
+          Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
+          arricchire il CV, tu pensa ad arricchire le tue competenze.
+        </p>
+        <div class="red-button">
+          <a href="#" class="a-button" target="_blank">PARTIAMO!</a>
+        </div>
+      </div>
+      <!-- Content Section -->
+      <div class="content">
+        <h2 class="content-title">Tutti ti cercheranno</h2>
+        <p>
+          Sono 30.000 in Italia le posizioni di developer scoperte, scegli
+          quella che ti stimola di piú
+        </p>
+        <h2 class="content-title">Lavora dove vuoi</h2>
+        <p>Lavora da casa, in riva al mare o in montagna.</p>
+        <div>
+          <img
+            src="assets/img/notebook.jpg"
+            alt="notebook"
+            class="circular-img"
+          />
+        </div>
+        <h2 class="content-title">Scegli il tuo ruolo</h2>
+        <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
+        <h2 class="content-title">Lavoro in libertá</h2>
+        <p>
+          Non serve lavorare in ufficio per essere creatori di prodotti digitali
+        </p>
+      </div>
+      <!-- Section Red Banner -->
+      <div class="red-banner">
+        <h2 class="promessa">Epicode garantisce</h2>
+        <p>
+          "3 mesi intensivi di corso che cambieranno radiczlmente la tua vita"
+        </p>
+        <p>Mario Rossi</p>
+
+        <p>CEO, Epicode</p>
+      </div>
+      <!-- Section Cards -->
+      <section>
+        <!-- Cards 1 -->
+        <div class="card">
+          <img src="assets/img/foto1.jpg" alt="pc" />
+          <h3>il Tuo PC</h3>
+          <p>
+            Se vuoi diventare developer é l'unico strumento di cui hai bisogno.
+          </p>
+        </div>
+        <!-- Cards 2 -->
+        <div class="card">
+          <img src="assets/img/foto2.jpg" alt="pc" />
+          <h3>Impara ora</h3>
+          <p>
+            Impara da chi diventerai tra qualche anno, e diventa una rockstar
+            come loro.
+          </p>
+        </div>
+        <!-- Caards 3 -->
+        <div class="card">
+          <img src="assets/img/foto3.jpg" alt="pc" />
+          <h3>Lavora subito</h3>
+          <p>Sappiamo cosa vogliono le aziende, Perché lavoriamo con loro.</p>
+        </div>
+      </section>
+    </main>
+    <!-- FOOTER -->
+    <footer>
+      <h1>Contattaci</h1>
+      <a href="#">(+39) 11223456</a>
+      <a href="mailto:info@epicode.school" target="_blank"
+        >info@epicode.school</a
+      >
+      <p>Via Appia 1 - 00100 Roma (RM)</p>
+      <!-- Copyright -->
+      <div class="copyright">
+        <p>© 2021 . Immagini di <a href="#">Pixabay</a>.</p>
+      </div>
+    </footer>
   </body>
 </html>
