--- a/index-mobile.html
+++ b/index-mobile.html
@@ -58,35 +58,35 @@
       <!-- Section Red Banner -->
       <div class="red-banner">
         <h2 class="promessa">Epicode garantisce</h2>
-        <p>
-          "3 mesi intensivi di corso che cambieranno radiczlmente la tua vita"
+        <p class="citazione">
+          "3 mesi intensivi di corso che cambieranno<br />
+          radicalmente la tua vita"
         </p>
-        <p>Mario Rossi</p>
-
-        <p>CEO, Epicode</p>
+        <p class="autore">Mario Rossi</p>
+        <p class="ruolo">CEO, Epicode</p>
       </div>
       <!-- Section Cards -->
       <section>
         <!-- Cards 1 -->
         <div class="card">
-          <img src="assets/img/foto1.jpg" alt="pc" />
-          <h3>il Tuo PC</h3>
+          <img src="assets/img/foto1.jpg" alt="pc" class="img-card" />
+          <h3>il tuo PC</h3>
           <p>
             Se vuoi diventare developer é l'unico strumento di cui hai bisogno.
           </p>
         </div>
         <!-- Cards 2 -->
         <div class="card">
-          <img src="assets/img/foto2.jpg" alt="pc" />
+          <img src="assets/img/foto2.jpg" alt="pc" class="img-card" />
           <h3>Impara ora</h3>
           <p>
             Impara da chi diventerai tra qualche anno, e diventa una rockstar
             come loro.
           </p>
         </div>
-        <!-- Caards 3 -->
+        <!-- Cards 3 -->
         <div class="card">
-          <img src="assets/img/foto3.jpg" alt="pc" />
+          <img src="assets/img/foto3.jpg" alt="pc" class="img-card" />
           <h3>Lavora subito</h3>
           <p>Sappiamo cosa vogliono le aziende, Perché lavoriamo con loro.</p>
         </div>
