--- a/index-mobile.html
+++ b/index-mobile.html
@@ -71,7 +71,7 @@
         <div class="card">
           <img src="assets/img/foto1.jpg" alt="pc" class="img-card" />
           <h3>il tuo PC</h3>
-          <p>
+          <p class="p-card">
             Se vuoi diventare developer é l'unico strumento di cui hai bisogno.
           </p>
         </div>
@@ -79,7 +79,7 @@
         <div class="card">
           <img src="assets/img/foto2.jpg" alt="pc" class="img-card" />
           <h3>Impara ora</h3>
-          <p>
+          <p class="p-card">
             Impara da chi diventerai tra qualche anno, e diventa una rockstar
             come loro.
           </p>
@@ -88,18 +88,20 @@
         <div class="card">
           <img src="assets/img/foto3.jpg" alt="pc" class="img-card" />
           <h3>Lavora subito</h3>
-          <p>Sappiamo cosa vogliono le aziende, Perché lavoriamo con loro.</p>
+          <p class="p-card">
+            Sappiamo cosa vogliono le aziende, Perché lavoriamo con loro.
+          </p>
         </div>
       </section>
     </main>
     <!-- FOOTER -->
     <footer>
-      <h1>Contattaci</h1>
-      <a href="#">(+39) 11223456</a>
+      <h1 class="footer-title">Contattaci</h1>
+      <a href="#"><i class="fas fa-phone-alt"></i> (+39) 11223456</a>
       <a href="mailto:info@epicode.school" target="_blank"
-        >info@epicode.school</a
+        ><i class="fas fa-envelope"></i> info@epicode.school</a
       >
-      <p>Via Appia 1 - 00100 Roma (RM)</p>
+      <p><i class="fas fa-location-arrow"></i> Via Appia 1 - 00100 Roma (RM)</p>
       <!-- Copyright -->
       <div class="copyright">
         <p>© 2021 . Immagini di <a href="#">Pixabay</a>.</p>
