--- a/index-mobile.html
+++ b/index-mobile.html
@@ -97,15 +97,21 @@
     <!-- FOOTER -->
     <footer>
       <h1 class="footer-title">Contattaci</h1>
-      <a href="#"><i class="fas fa-phone-alt"></i> (+39) 11223456</a>
-      <a href="mailto:info@epicode.school" target="_blank"
-        ><i class="fas fa-envelope"></i> info@epicode.school</a
+      <i class="fas fa-phone-alt"></i>
+      <a href="#" class="a-footer"> (+39) 11223456</a>
+      <br />
+      <i class="fas fa-envelope"></i>
+      <a href="mailto:info@epicode.school" target="_blank" class="a-footer"
+        >info@epicode.school</a
       >
-      <p><i class="fas fa-location-arrow"></i> Via Appia 1 - 00100 Roma (RM)</p>
+      <p class="p-footer">
+        <i class="fas fa-location-arrow"></i> Via Appia 1 - 00100 Roma (RM)
+      </p>
       <!-- Copyright -->
-      <div class="copyright">
-        <p>© 2021 . Immagini di <a href="#">Pixabay</a>.</p>
-      </div>
+      <hr class="copyright" />
+      <p class="p-copyright">
+        © 2021 . Immagini di <a href="#" class="a-copyright">Pixabay</a>.
+      </p>
     </footer>
   </body>
 </html>
