--- a/index-mobile.html
+++ b/index-mobile.html
@@ -13,6 +13,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- HEADER -->
@@ -51,7 +57,7 @@
         <h2 class="content-title">Scegli il tuo ruolo</h2>
         <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
         <h2 class="content-title">Lavoro in libertá</h2>
-        <p>
+        <p id="spazio">
           Non serve lavorare in ufficio per essere creatori di prodotti digitali
         </p>
       </div>
