--- a/index-desktop.html
+++ b/index-desktop.html
@@ -32,21 +32,16 @@
         <h1 class="web-dev">Corso Web Developer</h1>
         <p class="paragrafo">
           Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
-          arricchire il CV, tu pensa ad arricchire le tue competenze.
+          arricchire il CV, tu<br />
+          pensa ad arricchire le tue competenze.
         </p>
+
         <div class="red-button">
           <a href="#" class="a-button" target="_blank">PARTIAMO!</a>
         </div>
       </div>
       <!-- Content Section -->
       <div class="content">
-        <h2 class="content-title">Tutti ti cercheranno</h2>
-        <p>
-          Sono 30.000 in Italia le posizioni di developer scoperte, scegli
-          quella che ti stimola di piú
-        </p>
-        <h2 class="content-title">Lavora dove vuoi</h2>
-        <p>Lavora da casa, in riva al mare o in montagna.</p>
         <div>
           <img
             src="assets/img/notebook.jpg"
@@ -54,19 +49,33 @@
             class="circular-img"
           />
         </div>
-        <h2 class="content-title">Scegli il tuo ruolo</h2>
-        <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
-        <h2 class="content-title">Lavoro in libertá</h2>
-        <p id="spazio">
-          Non serve lavorare in ufficio per essere creatori di prodotti digitali
-        </p>
+        <div class="content-text">
+          <h2 class="content-title">Tutti ti cercheranno</h2>
+          <p class="content-paragraph">
+            Sono 30.000 in Italia le posizioni di developer scoperte, scegli
+            quella che ti stimola di piú
+          </p>
+          <h2 class="content-title">Lavora dove vuoi</h2>
+          <p class="content-paragraph">
+            Lavora da casa, in riva al mare o in montagna.
+          </p>
+
+          <h2 class="content-title">Scegli il tuo ruolo</h2>
+          <p class="content-paragraph">
+            Potrai scegliere se essere Azienda, Freelance o Startup
+          </p>
+          <h2 class="content-title">Lavoro in libertá</h2>
+          <p class="content-paragraph">
+            Non serve lavorare in ufficio per essere creatori di prodotti
+            digitali
+          </p>
+        </div>
       </div>
       <!-- Section Red Banner -->
       <div class="red-banner">
         <h2 class="promessa">Epicode garantisce</h2>
         <p class="citazione">
-          "3 mesi intensivi di corso che cambieranno<br />
-          radicalmente la tua vita"
+          "3 mesi intensivi di corso che cambieranno radicalmente la tua vita"
         </p>
         <p class="autore">Mario Rossi</p>
         <p class="ruolo">CEO, Epicode</p>
